--- a/SoyVioletAPP/app/src/main/AndroidManifest.xml
+++ b/SoyVioletAPP/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <!-------Este proyecto ha sido creado por Sleepy Kitty Dev----->
-    <!-------Aqui esta er Yaco tambien---->
+    <!-------Commit desde casa---->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
